--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <meta name="description" content="Convert videos online for free. Create and download converted videos instantly. Simple, fast, and no signup required.">
   <title>Free Video Converter</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4041775163958551"
-     crossorigin="anonymous"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4041775163958551" crossorigin="anonymous"></script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-LR5XP1GJFC"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -15,7 +14,8 @@
     gtag('js', new Date());
     gtag('config', 'G-LR5XP1GJFC');
   </script>
-  <script src="https://unpkg.com/@ffmpeg/ffmpeg@0.12.8/dist/ffmpeg.min.js"></script>
+  <!-- Updated to a more recent version of @ffmpeg/ffmpeg -->
+  <script src="https://unpkg.com/@ffmpeg/ffmpeg@0.12.10/dist/umd/ffmpeg.min.js"></script>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -235,147 +235,158 @@
   <footer>Free Video Converter. Made with ❤️</footer>
 
   <script>
-    const { createFFmpeg, fetchFile } = FFmpeg;
-    const ffmpeg = createFFmpeg({
-      log: true,
-      corePath: 'https://unpkg.com/@ffmpeg/core@0.12.4/dist/ffmpeg-core.js',
-      progress: ({ ratio }) => {
-        const percent = Math.floor(ratio * 100);
-        updateProgress(percent, `Converting: ${percent}% complete`);
-      }
-    });
-
-    let uploadedFile = null;
-    let conversionInProgress = false;
-
-    const dropZone = document.getElementById('dropZone');
-    const videoInput = document.getElementById('videoInput');
-    const dropZoneText = document.getElementById('dropZoneText');
-    const convertBtn = document.getElementById('convertBtn');
-    const progressContainer = document.getElementById('progressContainer');
-    const progressMessage = document.getElementById('progressMessage');
-    const progressFill = document.getElementById('progressFill');
-    const progressPercent = document.getElementById('progressPercent');
-    const resultContainer = document.getElementById('resultContainer');
-    const downloadLink = document.getElementById('downloadLink');
-
-    videoInput.addEventListener('change', handleFileSelect);
-    dropZone.addEventListener('click', () => videoInput.click());
-    dropZone.addEventListener('dragover', (e) => {
-      e.preventDefault();
-      dropZone.classList.add('active');
-    });
-    dropZone.addEventListener('dragleave', (e) => {
-      e.preventDefault();
-      dropZone.classList.remove('active');
-    });
-    dropZone.addEventListener('drop', (e) => {
-      e.preventDefault();
-      dropZone.classList.remove('active');
-      const file = e.dataTransfer.files[0];
-      if (file) processFile(file);
-    });
-    convertBtn.addEventListener('click', startConversion);
-
-    function handleFileSelect(e) {
-      const file = e.target.files[0];
-      if (file) processFile(file);
-    }
-
-    function processFile(file) {
-      const validTypes = ['video/mp4', 'video/quicktime', 'video/x-msvideo', 'video/x-matroska', 'video/webm'];
-      const validExtensions = ['.mp4', '.mov', '.avi', '.mkv', '.webm'];
-      const fileExt = '.' + file.name.split('.').pop().toLowerCase();
-
-      if (!validTypes.includes(file.type) && !validExtensions.includes(fileExt)) {
-        alert('Please select a valid video file (MP4, MOV, AVI, MKV, WEBM)');
-        return;
-      }
-      if (file.size > 100 * 1024 * 1024) {
-        alert('File size exceeds 100MB limit. Please choose a smaller file.');
+    // Wait for the page to fully load to ensure FFmpeg is available
+    window.addEventListener('load', function() {
+      // Check if FFmpeg is defined
+      if (typeof FFmpeg === 'undefined') {
+        console.error('FFmpeg is not defined. The library may have failed to load.');
+        alert('Error: FFmpeg library failed to load. Please check your internet connection and try again.');
         return;
       }
 
-      uploadedFile = file;
-      dropZoneText.textContent = `File selected: ${truncateFileName(file.name, 20)} (${formatFileSize(file.size)})`;
-      convertBtn.disabled = false;
-    }
+      // Now safe to use FFmpeg
+      const { createFFmpeg, fetchFile } = FFmpeg;
+      const ffmpeg = createFFmpeg({
+        log: true,
+        corePath: 'https://unpkg.com/@ffmpeg/core@0.12.6/dist/umd/ffmpeg-core.js',
+        progress: ({ ratio }) => {
+          const percent = Math.floor(ratio * 100);
+          updateProgress(percent, `Converting: ${percent}% complete`);
+        }
+      });
 
-    async function startConversion() {
-      if (!uploadedFile || conversionInProgress) return;
+      let uploadedFile = null;
+      let conversionInProgress = false;
 
-      progressContainer.style.display = 'block';
-      resultContainer.style.display = 'none';
-      conversionInProgress = true;
-      convertBtn.disabled = true;
+      const dropZone = document.getElementById('dropZone');
+      const videoInput = document.getElementById('videoInput');
+      const dropZoneText = document.getElementById('dropZoneText');
+      const convertBtn = document.getElementById('convertBtn');
+      const progressContainer = document.getElementById('progressContainer');
+      const progressMessage = document.getElementById('progressMessage');
+      const progressFill = document.getElementById('progressFill');
+      const progressPercent = document.getElementById('progressPercent');
+      const resultContainer = document.getElementById('resultContainer');
+      const downloadLink = document.getElementById('downloadLink');
 
-      const format = document.getElementById('format').value;
-      const quality = document.getElementById('quality').value;
-      const muteAudio = document.getElementById('mute-audio').checked;
-      const inputExt = uploadedFile.name.split('.').pop();
-      const inputName = `input.${inputExt}`;
-      const outputName = `output.${format}`;
+      videoInput.addEventListener('change', handleFileSelect);
+      dropZone.addEventListener('click', () => videoInput.click());
+      dropZone.addEventListener('dragover', (e) => {
+        e.preventDefault();
+        dropZone.classList.add('active');
+      });
+      dropZone.addEventListener('dragleave', (e) => {
+        e.preventDefault();
+        dropZone.classList.remove('active');
+      });
+      dropZone.addEventListener('drop', (e) => {
+        e.preventDefault();
+        dropZone.classList.remove('active');
+        const file = e.dataTransfer.files[0];
+        if (file) processFile(file);
+      });
+      convertBtn.addEventListener('click', startConversion);
 
-      try {
-        updateProgress(10, 'Initializing FFmpeg...');
-        if (!ffmpeg.isLoaded()) await ffmpeg.load();
-        updateProgress(20, 'Reading video data...');
-        ffmpeg.FS('writeFile', inputName, await fetchFile(uploadedFile));
+      function handleFileSelect(e) {
+        const file = e.target.files[0];
+        if (file) processFile(file);
+      }
 
-        let args = ['-i', inputName];
-        if (quality === 'high') args.push('-crf', '18', '-preset', 'slow');
-        else if (quality === 'medium') args.push('-crf', '23', '-preset', 'medium');
-        else if (quality === 'low') args.push('-crf', '28', '-preset', 'fast');
-        if (muteAudio) args.push('-an');
-        args.push(outputName);
+      function processFile(file) {
+        const validTypes = ['video/mp4', 'video/quicktime', 'video/x-msvideo', 'video/x-matroska', 'video/webm'];
+        const validExtensions = ['.mp4', '.mov', '.avi', '.mkv', '.webm'];
+        const fileExt = '.' + file.name.split('.').pop().toLowerCase();
 
-        updateProgress(30, 'Starting conversion...');
-        await ffmpeg.run(...args);
-        updateProgress(95, 'Finalizing output...');
+        if (!validTypes.includes(file.type) && !validExtensions.includes(fileExt)) {
+          alert('Please select a valid video file (MP4, MOV, AVI, MKV, WEBM)');
+          return;
+        }
+        if (file.size > 100 * 1024 * 1024) {
+          alert('File size exceeds 100MB limit. Please choose a smaller file.');
+          return;
+        }
 
-        const data = ffmpeg.FS('readFile', outputName);
-        const outputBlob = new Blob([data.buffer], { type: `video/${format}` });
-        const outputUrl = URL.createObjectURL(outputBlob);
-
-        ffmpeg.FS('unlink', inputName);
-        ffmpeg.FS('unlink', outputName);
-
-        updateProgress(100, 'Conversion complete!');
-        setTimeout(() => {
-          showResults(outputUrl, format);
-          conversionInProgress = false;
-        }, 500);
-      } catch (err) {
-        console.error(err);
-        updateProgress(0, 'Conversion failed');
-        alert(`Error: ${err.message}`);
-        conversionInProgress = false;
+        uploadedFile = file;
+        dropZoneText.textContent = `File selected: ${truncateFileName(file.name, 20)} (${formatFileSize(file.size)})`;
         convertBtn.disabled = false;
       }
-    }
 
-    function showResults(url, format) {
-      downloadLink.href = url;
-      downloadLink.download = `converted.${format}`;
-      resultContainer.style.display = 'block';
-    }
+      async function startConversion() {
+        if (!uploadedFile || conversionInProgress) return;
 
-    function updateProgress(percent, message) {
-      progressMessage.textContent = message;
-      progressFill.style.width = `${percent}%`;
-      progressPercent.textContent = `${percent}%`;
-    }
+        progressContainer.style.display = 'block';
+        resultContainer.style.display = 'none';
+        conversionInProgress = true;
+        convertBtn.disabled = true;
 
-    function truncateFileName(name, maxLength) {
-      if (name.length <= maxLength) return name;
-      return name.substring(0, maxLength / 2) + '...' + name.substring(name.length - maxLength / 2);
-    }
+        const format = document.getElementById('format').value;
+        const quality = document.getElementById('quality').value;
+        const muteAudio = document.getElementById('mute-audio').checked;
+        const inputExt = uploadedFile.name.split('.').pop();
+        const inputName = `input.${inputExt}`;
+        const outputName = `output.${format}`;
 
-    function formatFileSize(bytes) {
-      if (bytes < 1024) return bytes + ' bytes';
-      else if (bytes < 1048576) return (bytes / 1024).toFixed(1) + ' KB';
-      else return (bytes / 1048576).toFixed(1) + ' MB';
-    }
+        try {
+          updateProgress(10, 'Initializing FFmpeg...');
+          if (!ffmpeg.isLoaded()) await ffmpeg.load();
+          updateProgress(20, 'Reading video data...');
+          ffmpeg.FS('writeFile', inputName, await fetchFile(uploadedFile));
+
+          let args = ['-i', inputName];
+          if (quality === 'high') args.push('-crf', '18', '-preset', 'slow');
+          else if (quality === 'medium') args.push('-crf', '23', '-preset', 'medium');
+          else if (quality === 'low') args.push('-crf', '28', '-preset', 'fast');
+          if (muteAudio) args.push('-an');
+          args.push(outputName);
+
+          updateProgress(30, 'Starting conversion...');
+          await ffmpeg.run(...args);
+          updateProgress(95, 'Finalizing output...');
+
+          const data = ffmpeg.FS('readFile', outputName);
+          const outputBlob = new Blob([data.buffer], { type: `video/${format}` });
+          const outputUrl = URL.createObjectURL(outputBlob);
+
+          ffmpeg.FS('unlink', inputName);
+          ffmpeg.FS('unlink', outputName);
+
+          updateProgress(100, 'Conversion complete!');
+          setTimeout(() => {
+            showResults(outputUrl, format);
+            conversionInProgress = false;
+          }, 500);
+        } catch (err) {
+          console.error('Conversion error:', err);
+          updateProgress(0, 'Conversion failed');
+          alert(`Error: ${err.message}`);
+          conversionInProgress = false;
+          convertBtn.disabled = false;
+        }
+      }
+
+      function showResults(url, format) {
+        downloadLink.href = url;
+        downloadLink.download = `converted.${format}`;
+        resultContainer.style.display = 'block';
+      }
+
+      function updateProgress(percent, message) {
+        progressMessage.textContent = message;
+        progressFill.style.width = `${percent}%`;
+        progressPercent.textContent = `${percent}%`;
+      }
+
+      function truncateFileName(name, maxLength) {
+        if (name.length <= maxLength) return name;
+        return name.substring(0, maxLength / 2) + '...' + name.substring(name.length - maxLength / 2);
+      }
+
+      function formatFileSize(bytes) {
+        if (bytes < 1024) return bytes + ' bytes';
+        else if (bytes < 1048576) return (bytes / 1024).toFixed(1) + ' KB';
+        else return (bytes / 1048576).toFixed(1) + ' MB';
+      }
+    });
   </script>
 </body>
 </html>
