--- a/index.html
+++ b/index.html
@@ -54,9 +54,10 @@
 
   <footer>Free Video Converter. Made with ❤️</footer>
 
-  <script type="module">
-    // Import from jsDelivr with corrected UMD path
-    import { createFFmpeg, fetchFile } from 'https://cdn.jsdelivr.net/npm/@ffmpeg/ffmpeg@0.12.10/dist/umd/ffmpeg.min.js';
+  <script src="https://cdn.jsdelivr.net/npm/@ffmpeg/ffmpeg@0.12.10/dist/umd/ffmpeg.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@ffmpeg/core@0.12.10/dist/umd/ffmpeg-core.js"></script>
+  <script>
+    const { createFFmpeg, fetchFile } = FFmpeg;
 
     const ffmpeg = createFFmpeg({
       log: true,
