--- a/index.html
+++ b/index.html
@@ -54,6 +54,20 @@
 
   <footer>Free Video Converter. Made with ❤️</footer>
 
+  <div id="constructionOverlay" style="position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.85); color:white; display:flex; flex-direction:column; justify-content:center; align-items:center; z-index:1000;">
+  <div style="max-width:600px; text-align:center; padding:2em; background:#222; border-radius:10px; box-shadow:0 0 15px rgba(0,0,0,0.5);">
+    <h2>🚧 Site Under Construction</h2>
+    <p>This site is currently being improved and might not function as intended.</p>
+    <p>While you wait, feel free to explore our other tools:</p>
+    <ul style="list-style:none; padding:0;">
+      <li><a href="https://free-qr-maker.com" style="color:#00d4ff;" target="_blank">free-qr-maker.com</a></li>
+      <li><a href="https://free-ean-maker.com" style="color:#00d4ff;" target="_blank">free-ean-maker.com</a></li>
+      <li><a href="https://free-image-toolkit.com" style="color:#00d4ff;" target="_blank">free-image-toolkit.com</a></li>
+    </ul>
+    <button onclick="document.getElementById('constructionOverlay').style.display='none'" style="margin-top:1.5em; padding:0.75em 1.5em; background:#00d4ff; color:#000; border:none; border-radius:6px; font-size:1em; cursor:pointer;">Continue Anyway</button>
+  </div>
+</div>
+
   <!-- Load FFmpeg from official CDN -->
   <script src="https://cdn.jsdelivr.net/npm/@ffmpeg/ffmpeg@0.12.10/dist/ffmpeg.min.js"></script>
   <script>
